UtahLiveDataTest/src/objects/Grants_API_Document_Status__c.object
<CustomObject>
    <fields>
        <fullName>Count_Of_Children__c</fullName>
        <label>Count Of Children</label>
        <summaryForeignKey>Grants_API_Document_Status_Detail__c.Grants_API_Document_Status__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Of_Inactive_Children__c</fullName>
        <label>Count Of Inactive Children</label>
        <summaryFilterItems>
            <field>Grants_API_Document_Status_Detail__c.Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Grants_API_Document_Status_Detail__c.Grants_API_Document_Status__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Document_Status_Check__c</fullName>
        <description>Datetime to store last date of status check.</description>
        <label>Document Status Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Transmission_Date__c</fullName>
        <description>Datetime representing when the Document was successfully transmitted to the Grants API</description>
        <label>Document Transmission Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Transmission_Date_in_MS__c</fullName>
        <description>Document Transmission Date in milliseconds. This value must be unique due to the need for a proper order of documents. DO NOT REMOVE THE UNIQUE, EXTERNAL ID OR REQUIRED ATTRIBUTES.</description>
        <externalId>true</externalId>
        <label>Document Transmission Date in MS</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ErrorCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GovGrants_DOC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID stored in GovGrants which is attached to the transmitted document through the DOC_DSRC value on the header. This will be used to search the Grantor API for the document if a Grants API DOC_ID is not available.</description>
        <externalId>true</externalId>
        <label>GovGrants DOC_ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grants_API_DOC_ID__c</fullName>
        <description>Grants API DOC_ID</description>
        <externalId>true</externalId>
        <label>Grants API DOC_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Dept_CD__c</fullName>
        <description>Document Department Code from Document being transmitted to Grants API</description>
        <label>Grants_API_Document_Dept_CD</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Final__c</fullName>
        <description>Flag to show if the document is in a final state.</description>
        <formula>UPPER( TEXT( Grants_API_Document_Status__c ) ) == &quot;REJECTED&quot; ||
UPPER( TEXT( Grants_API_Document_Phase__c ) ) == &quot;FINAL&quot; ||
(Count_Of_Children__c &gt; 0 &amp;&amp; Count_Of_Children__c  ==  Count_Of_Inactive_Children__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grants API Document Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Phase__c</fullName>
        <description>Grants API Document Phase</description>
        <label>Grants API Document Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Status__c</fullName>
        <description>Grants API Document Status</description>
        <label>Grants API Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grants_API_Document_Phase__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Type__c</fullName>
        <label>Grants API Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GAX</fullName>
                </value>
                <value>
                    <fullName>GCAM</fullName>
                </value>
                <value>
                    <fullName>IET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Status_Check__c</fullName>
        <description>Datetime to store last date of status check.</description>
        <label>Last Status Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Needs_Status_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to schedule a status check for the document.</description>
        <label>Needs Status Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Grants API Document Status</label>
    <nameField>
        <displayFormat>GADS-{0}</displayFormat>
        <label>Grants API Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants API Document Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>